# axum-template

./: Cargo.toml  README.md  cspell-words.txt  cspell.json  project-words.txt
.github/workflows/: rust-ci.yml
assets/: featured.xcf
src/: ctx.rs  error.rs  graphql.rs  main.rs  model.rs  model_no_db.rs  mw_ctx.rs  mw_req_logger.rs  service.rs  web.rs
src/graphql/: model.rs  mutation_root.rs  query_root.rs
src/graphql/mutation_root/: tickets_mutation.rs  tickets_no_db_mutation.rs
src/graphql/query_root/: tickets_no_db_query.rs  tickets_query.rs
src/service/: ticket.rs  ticket_no_db.rs
src/web/: mw_auth.rs  routes_hello.rs  routes_login.rs  routes_tickets.rs  routes_tickets_no_db.rs
