[package]
name = "axum-template"
version = "0.1.1"
edition = "2021"

[dependencies]
async-graphql = "5.0.10"
async-graphql-axum = "5.0.10"
axum = "0.6"
chrono = "0.4"
jsonwebtoken = "8.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v1.0.0-beta.9", features = [
  "kv-mem"
] }
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.9"
tower-http = { version = "0.4", features = ["fs"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
