[package]
name = "axum-template"
version = "0.2.0"
edition = "2021"

[dependencies]
async-graphql = "7"
async-graphql-axum = "7"
axum = "0.8"
chrono = "0.4"
jsonwebtoken = "8"
once_cell = "1.18.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = { version = "1", features = ["kv-mem"] }
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.11"
tower-http = { version = "0.6", features = ["fs"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
